# api-hack2m

./: .env.example  README.md  main.py  pyproject.toml
code/: README.md  __init__.py  main.py  pyproject.toml
code/ai/: __init__.py  llm_handler.py
code/api/routers/: auth.py  challenges.py  scores.py  users.py
code/config/: __init__.py  challenges.py  settings.py
code/core/: challenge_service.py  score_service.py  user_service.py
code/database/: __init__.py  db.py
code/error/: __init__.py  exceptions.py  handlers.py
code/llama/: model.py
code/log/: __init__.py  logger.py
code/model/: __init__.py  challenge.py  score.py  user.py
code/model/api/: requests.py  responses.py
code/model/challenges/: challenge.py
code/test/: __init__.py  test_challenges.py
docker/: Dockerfile  docker-compose.yml
docker/config/: init.sql
docker/local/: Dockerfile
