[tool.poetry]
name = "api-hack2m"
version = "0.1.0"
description = "A FastAPI with Uvicorn to serve as backend API to the LLM model in a CTF LLM Hacking web app"
authors = ["misgom <mmg.contacto@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
transformers = "^4.47.1"
sentencepiece = "^0.2.0"
torch = {version = "^2.5.1+cu118", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.5.1+cu118", source = "pytorch-gpu"}
accelerate = "^1.2.1"
bitsandbytes = "^0.45.0"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "api-hack2m:main"
